new proj/src/objects/Merged_Account_History__c.object
<CustomObject>
    <description>This Object contains Looser Account details once the Merge process is successful.</description>
    <fields>
        <fullName>GE_HQ_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merged Account Histories</relationshipLabel>
        <relationshipName>Merged_Account_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_City__c</fullName>
        <label>Billing City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_GE_Status_Flag__c</fullName>
        <label>GE Status Flag</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merge_Occured__c</fullName>
        <description>This is to confirm if Merge Process has been successfully completed.</description>
        <label>Merge Occured</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merged_DUNS_Number__c</fullName>
        <label>Merged DUNS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merged_Shipping_City__c</fullName>
        <label>Merged Shipping City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merged_Shipping_Country__c</fullName>
        <label>Merged Shipping Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merged_Shipping_StateProvince__c</fullName>
        <label>Merged Shipping StateProvince</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merged_Shipping_Street__c</fullName>
        <label>Merged Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Merged_Shipping_Zip_Postal_Code__c</fullName>
        <label>Merged Shipping Zip Postal Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Shipping_State_Province__c</fullName>
        <label>Shipping State / Province</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <label>Merged Account History</label>
    <nameField>
        <label>Merged Account History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merged Account Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>